fix spacing issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ html, body {
 .nav-logo {
   padding: 1em 0;
   width: 100%;
-  max-width: 350px;
+  max-width: 250px;
 }
 
 .footer-logo {
